Prevent form from being too wide

--- a/src/keycloak/petBuddy-theme/login/resources/css/styles.css
+++ b/src/keycloak/petBuddy-theme/login/resources/css/styles.css
@@ -54,7 +54,8 @@ card-pf p.pf-c-input-group
 
 .card-pf {
   height: 800px;
-  max-width: max-content;
+  min-width: 320px;
+  max-width: 700px;
   border-top: 0;
   margin: 0;
   display: flex;
@@ -272,6 +273,7 @@ a:-webkit-any-link {
 }
 
 #kc-terms-text {
+  max-width: 400px;
   color: white;
 }
 
